config(all-your-base): prereqs/practices: add error-sets

--- a/config.json
+++ b/config.json
@@ -655,11 +655,13 @@
         "name": "All Your Base",
         "practices": [
           "allocators",
+          "error-sets",
           "integers",
           "math"
         ],
         "prerequisites": [
           "allocators",
+          "error-sets",
           "integers",
           "math"
         ],
