exercises(all-your-base): implement (#275)
Omit overflow tests for now. Rationale:

- I think this exercise already has enough content.

- Other exercises are probably better suited for gaining the track's
  first overflow tests.

- The user can still implement overflow handling if they want.

- We can still add overflow tests later, possibly making them opt-in.

--- a/config.json
+++ b/config.json
@@ -650,6 +650,24 @@
         "difficulty": 1
       },
       {
+        "uuid": "52281bbe-e1f6-4423-8092-6a8940a50ced",
+        "slug": "all-your-base",
+        "name": "All Your Base",
+        "practices": [
+          "allocators",
+          "error-sets",
+          "integers",
+          "math"
+        ],
+        "prerequisites": [
+          "allocators",
+          "error-sets",
+          "integers",
+          "math"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "a9ba66ae-85d1-490e-a421-e2e35f90231e",
         "slug": "sum-of-multiples",
         "name": "Sum of Multiples",
