exercises(anagram): implement (#274)
I think it's better to:

- Return a BufSet, rather than a StringHashMap(void).

- Return a set of strings, rather than an ArrayList. The latter would
  also need extra steps at test time to ensure that the user can return
  the anagrams in any order.

- Pass an allocator, rather than making `candidates` a BufSet (and
  possibly requiring the user to remove non-anagrams from it).

This is the first exercise that involves a BufSet. Put it before
`word-count`, which uses a StringHashMap(u32).

--- a/config.json
+++ b/config.json
@@ -684,6 +684,22 @@
         "difficulty": 1
       },
       {
+        "uuid": "74d33b36-1c1c-45ca-9c8b-da9f1f97ea0b",
+        "slug": "anagram",
+        "name": "Anagram",
+        "practices": [
+          "allocators",
+          "hashmaps",
+          "slices"
+        ],
+        "prerequisites": [
+          "allocators",
+          "hashmaps",
+          "slices"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "809cf06c-442b-4214-83ee-de7cf7e1a6fb",
         "slug": "word-count",
         "name": "Word Count",
