--- a/config.json
+++ b/config.json
@@ -484,6 +484,20 @@
         "difficulty": 1
       },
       {
+        "uuid": "0e524507-7144-400e-a0c4-da150a4a2604",
+        "slug": "atbash-cipher",
+        "name": "Atbash cipher",
+        "practices": [
+          "allocators",
+          "strings"
+        ],
+        "prerequisites": [
+          "allocators",
+          "strings"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "b9533606-bbbd-4110-8adc-54ccf94af1a6",
         "slug": "sieve",
         "name": "Sieve",
