--- a/config.json
+++ b/config.json
@@ -747,6 +747,14 @@
           "structs"
         ],
         "difficulty": 4
+      },
+      {
+        "slug": "roman-numerals",
+        "name": "Roman Numerals",
+        "uuid": "ad55f4da-9f64-4a81-908d-43224d672e80",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 4
       }
     ]
   },
