--- a/config.json
+++ b/config.json
@@ -753,7 +753,12 @@
         "name": "Roman Numerals",
         "uuid": "ad55f4da-9f64-4a81-908d-43224d672e80",
         "practices": [],
-        "prerequisites": [],
+        "prerequisites": [
+          "allocators",
+          "conditionals",
+          "control-flow",
+          "slices"
+        ],
         "difficulty": 4
       }
     ]
