--- a/config.json
+++ b/config.json
@@ -241,6 +241,14 @@
         "difficulty": 1
       },
       {
+        "slug": "pythagorean-triplet",
+        "name": "Pythagorean Triplet",
+        "uuid": "393d316c-f20a-4d86-859b-8bf0e920fb55",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 5
+      },
+      {
         "slug": "grains",
         "name": "Grains",
         "uuid": "dff58791-4373-46ec-933a-ea27a28b4486",
