Use @memcpy, sync new test case

--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "mk2s"
   ],
+  "contributors": [
+    "keiravillekode"
+  ],
   "files": {
     "solution": [
       "roman_numerals.zig"
