--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -10,7 +10,9 @@ jobs:
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
     - name: Install Zig
-      run: ./.github/bin/install-zig
+      uses: mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
+      with:
+        version: 0.13.0
 
     - name: Check that Zig code is formatted
       run: |
