--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Zig
       uses: mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
       with:
-        version: 0.15.0-dev.1599+cf90a5e45
+        version: 0.15.0
 
     - name: Test exercises
       shell: bash
