--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Install Zig
       uses: mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
       with:
-        version: 0.15.0-dev.1599+cf90a5e45
+        version: 0.15.0
 
     - name: Check that Zig code is formatted
       run: |
