--- a/config.json
+++ b/config.json
@@ -914,6 +914,14 @@
         "difficulty": 5
       },
       {
+        "slug": "killer-sudoku-helper",
+        "name": "Killer Sudoku Helper",
+        "uuid": "7867fffe-c136-455c-bf3c-2cf071282839",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 5
+      },
+      {
         "slug": "knapsack",
         "name": "Knapsack",
         "uuid": "ffa03fc8-0503-4524-ae40-9f3202349003",
