word-count - checkAllAllocationFailures

--- a/exercises/practice/word-count/.meta/config.json
+++ b/exercises/practice/word-count/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "ee7"
   ],
+  "contributors": [
+    "keiravillekode"
+  ],
   "files": {
     "solution": [
       "word_count.zig"
