--- a/config.json
+++ b/config.json
@@ -964,6 +964,14 @@
         "difficulty": 5
       },
       {
+        "slug": "spiral-matrix",
+        "name": "Spiral Matrix",
+        "uuid": "9d64ac83-82a9-44eb-a9c5-214c034e3ce4",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 5
+      },
+      {
         "slug": "variable-length-quantity",
         "name": "Variable Length Quantity",
         "uuid": "1ec6b6b1-7c49-4902-a042-3dd05a8fdb09",
