--- a/config.json
+++ b/config.json
@@ -1012,6 +1012,14 @@
         "difficulty": 6
       },
       {
+        "slug": "say",
+        "name": "Say",
+        "uuid": "0dc72cfc-44ff-4ce2-9e72-954726f48304",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 6
+      },
+      {
         "slug": "two-bucket",
         "name": "Two Bucket",
         "uuid": "76a612c1-2cff-44f6-903e-9bc7457916f8",
