--- a/config.json
+++ b/config.json
@@ -781,6 +781,14 @@
         "difficulty": 4
       },
       {
+        "slug": "diamond",
+        "name": "Diamond",
+        "uuid": "7f07006a-eafb-4dc3-87f3-4bbf945f6da7",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 4
+      },
+      {
         "slug": "house",
         "name": "House",
         "uuid": "af541c61-e752-49f3-aa0e-8d96a738d0f1",
