--- a/config.json
+++ b/config.json
@@ -1084,6 +1084,14 @@
         "difficulty": 7
       },
       {
+        "slug": "palindrome-products",
+        "name": "Palindrome Products",
+        "uuid": "4f4d859e-18c2-4a80-ad95-5f2427dafc9d",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 8
+      },
+      {
         "slug": "word-count",
         "name": "Word Count",
         "uuid": "809cf06c-442b-4214-83ee-de7cf7e1a6fb",
