--- a/config.json
+++ b/config.json
@@ -1004,6 +1004,14 @@
         "difficulty": 5
       },
       {
+        "slug": "saddle-points",
+        "name": "Saddle Points",
+        "uuid": "f4028015-f47c-4826-9f19-814f452a27ce",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 5
+      },
+      {
         "slug": "spiral-matrix",
         "name": "Spiral Matrix",
         "uuid": "9d64ac83-82a9-44eb-a9c5-214c034e3ce4",
