--- a/exercises/practice/isbn-verifier/.meta/tests.toml
+++ b/exercises/practice/isbn-verifier/.meta/tests.toml
@@ -30,6 +30,9 @@ description = "invalid character in isbn is not treated as zero"
 [28025280-2c39-4092-9719-f3234b89c627]
 description = "X is only valid as a check digit"
 
+[8005b57f-f194-44ee-88d2-a77ac4142591]
+description = "only one check digit is allowed"
+
 [fdb14c99-4cf8-43c5-b06d-eb1638eff343]
 description = "X is not substituted by the value 10"
 
